--- a/hydraulic.v2.8.2
+++ b/hydraulic.v2.8.2
@@ -1244,8 +1244,7 @@
         "                 minruntime= 0, maxruntime= 0, inlists= \"\", notinlists= \"\", imdbsort= \"\", imdborder= \"\", filterwatched= False,\n",
         "                filterdownloaded= False, top250= False, top1000= False, oscarwinner= False, bestpicturewinner= False,\n",
         "                bestdirectorwinner= False, englishonly= False, animationtitles= False, internationaltitles= False, indianmovies= False,\n",
-        "                sites= None, sitecategory= \"\", siteparameters= \"\", attrs= None,\n",
-        "                ):\n",
+        "                sites= None, sitecategory= \"\", siteparameters= \"\", attrs= None):\n",
         "        self.keyword = keyword\n",
         "        self.titletype = titletype\n",
         "        self.startdate = startdate\n",
@@ -1416,7 +1415,7 @@
         "        self.watchedtitlespages = dict()\n",
         "\n",
         "    results: list[IMDBTitle] = None\n",
-        "    params: IMDBParams = None\n",
+        "    params: IMDBParams \n",
         "    downloadedcount = 0\n",
         "    watchedcount = 0\n",
         "    downloadedtitles: list[IMDBTitle] = None\n",
@@ -1425,11 +1424,12 @@
         "    def actionhandler(self, e):\n",
         "        params = self.params\n",
         "        if e.column == ' ':\n",
-        "            result: IMDBTitle = self.results[e.row]\n",
+        "            result: IMDBResult = self.results[e.row]\n",
         "            info(f'Searching download {result.title} from IMDB search.')\n",
+        "            search = f\"{result.title} {result.params.siteparameters}\"\n",
         "            switchview(nav[SEARCH_TAB], getloadingview( f'Search for {types[self.attrs.type_]} \"{result.title}\" site: {params.sites[0]} page: 1.'), temp= True)\n",
         "            maintabs.selected_index = appstate.tab_indices[SEARCH_TAB]\n",
-        "            search_process(params.sites, result.title, self.attrs, category= params.sitecategory, sort= SEEDERSSORT, order= DESCORDER, page= 1)\n",
+        "            search_process(site= params.sites[0], search= search, attrs= self.attrs, category= params.sitecategory, sort= SEEDERSSORT, order= DESCORDER, page= 1, source= IMDB_TAB)\n",
         "\n",
         "    def getdataframe(self):\n",
         "        resulttablesource = {\"Title\":[],  \"Director\": [], \"Staring\": [],\"Genres\": [], \"Rating\": [], \"Votes\": [], \"Runtime\": [], \"Downloaded\": [], \" \": []}\n",
@@ -2290,7 +2290,6 @@
         "    \n",
         "def searchIMDB(params: IMDBParams, page= 1, perpage= 40, result: IMDBResult= None):\n",
         "    if page < 1: page = 1\n",
-        "    \n",
         "    imdbgroupsandlabels = \"\"\n",
         "    if params.top250:\n",
         "        imdbgroupsandlabels = imdbgroupsandlabels + IMDB_TOP_250 + \",\"\n",
@@ -2321,22 +2320,22 @@
         "    sortandorder = params.imdbsort\n",
         "    if params.imdborder == ASCORDER:   sortandorder = sortandorder + \",asc\"\n",
         "    else:   sortandorder = sortandorder + \",desc\" \n",
-        "\n",
+        "    releasedates = f\"&release_date={params.startdate},{params.enddate}\" if params.startdate or params.enddate else ''\n",
+        "    ratings = f\"&user_rating={params.minrating if params.minrating else ''},{params.maxrating if params.maxrating else ''}\" if params.minrating or params.maxrating else ''\n",
+        "    votes = f\"&num_votes={params.minvotes if params.minvotes else ''},{params.maxvotes if params.maxvotes else ''}\" if params.minvotes or params.maxvotes else ''\n",
+        "    runtime = f\"&runtime={params.minruntime if params.minruntime else ''},{params.maxruntime if params.maxruntime else ''}\" if params.minruntime or params.maxruntime else ''\n",
+        "    userwatched = '' # \"&my_ratings=exclude\" if params.filterwatched else ''\n",
         "    pagestr= f\"start={1+((page-1)*perpage)}\"\n",
-        "\n",
-        "    url = f'''https://www.imdb.com/search/title/?title={params.keyword}&title_type={params.titletype}\n",
-        "    &release_date={params.startdate},{params.enddate}&user_rating={params.minrating},{params.maxrating}\n",
-        "    &num_votes={params.minvotes},{params.maxvotes}&runtime={params.minruntime},{params.maxruntime}\n",
-        "    &my_ratings=exclude&lists={params.inlists}&groups={params.labels}&sort={sortandorder}&view=advanced&count={perpage}&{pagestr}'''\n",
-        "\n",
+        "    url = f'https://www.imdb.com/search/title/?title={params.keyword}&title_type={params.titletype}{releasedates}{ratings}{votes}{runtime}{userwatched}&lists={lists}&groups={imdbgroupsandlabels}&sort={sortandorder}&view=advanced&count={perpage}&{pagestr}'\n",
         "    if not result:\n",
         "        result = IMDBResult()\n",
         "        result.params = params\n",
+        "        result.attrs = params.attrs\n",
         "        result.url = url\n",
         "        appstate.searchresults.append(result)\n",
-        "\n",
         "    req = requests.get(url, headers = {\"Accept-Language\": \"en-US\"})\n",
         "    result.currentpageurl = url\n",
+        "    result.page = page\n",
         "    result.request = req \n",
         "    if req.status_code == 200:\n",
         "        info(\"\\n IMDB Search Done Successfully.\\n\")\n",
@@ -2350,24 +2349,30 @@
         "        if countSearch:\n",
         "            result.resultscount = int(countSearch.group())\n",
         "            result.totalpages = ceil(result.resultscount/perpage)\n",
-        "            result.nextpage = page + 1 if page + 1 <= result.totalpages else 0      \n",
+        "            result.nextpage = page + 1 if page + 1 <= result.totalpages else 0  \n",
+        "            result.previouspage = page - 1  \n",
         "        else:\n",
+        "            result.previouspage = 0\n",
+        "            result.nextpage = 0\n",
         "            result.totalpages = 1\n",
         "            \n",
         "        titles: list[IMDBTitle]= []\n",
         "        downloaded: list[IMDBTitle]= []\n",
         "        watched: list[IMDBTitle] = []\n",
-        "\n",
         "        allitems = main.findAll(class_=\"lister-item\")\n",
         "        for item in allitems:\n",
         "            try:\n",
         "                title_raw = item.find(class_=\"lister-item-header\").a.text\n",
         "                year_raw = item.find(class_=\"lister-item-year\").text\n",
         "                fulltitle = find_title(title_raw, year_raw)\n",
-        "                runtime = item.find(class_=\"runtime\").text.strip()\n",
+        "                runtime = item.find(class_=\"runtime\")\n",
         "                rating = item.find(class_=\"ratings-imdb-rating\")[\"data-value\"]\n",
         "                votes = item.find(\"span\", {\"name\":\"nv\"}).text.strip()\n",
-        "                genres = item.find(class_=\"genre\").text.strip()\n",
+        "                if runtime: runtime = runtime.text.strip()\n",
+        "                else: runtime = \"\"\n",
+        "                genres = item.find(class_=\"genre\")\n",
+        "                if genres: genres = genres.text.strip()\n",
+        "                else: genres = \"\"\n",
         "                ppl = item.select_one(\"div.lister-item-content > p:nth-child(5)\").text\n",
         "                splt = ppl.split(\"| \\n\")\n",
         "                if len(splt) == 2:\n",
@@ -2386,6 +2391,9 @@
         "                    title.downloaded= True\n",
         "                    if not params.filterdownloaded:\n",
         "                        titles.append(title) \n",
+        "                else:\n",
+        "                    titles.append(title)\n",
+        "                info(f\"Scrapped IMDB title {fulltitle}\")\n",
         "            except:\n",
         "                error(ex())\n",
         "                continue       \n",
@@ -3991,7 +3999,7 @@
         "def loadconffilehandler(button):\n",
         "    configview1r5saveconfoutput_html.value = gethtmltext(\"Configuration loaded.\", fontsize='14px', style= saveconfstyle) \n",
         "\n",
-        "def search_process(site, search, attrs, category= '', sort= SEEDERSSORT, order= DESCORDER, page= 1):\n",
+        "def search_process(site, search, attrs, category= '', sort= SEEDERSSORT, order= DESCORDER, page= 1, source= SEARCH_TAB):\n",
         "    info(f\"Searching for {search} in sites {', '.join(site)}\")\n",
         "    l337xsort = getsitesort(sort, order, site)\n",
         "    category = getsitecategory(category, site)\n",
@@ -4000,7 +4008,8 @@
         "        appstate.searchresults.append(result)\n",
         "    if result:\n",
         "        searchresultview = getsearchresultview(result)\n",
-        "        switchview(nav[SEARCH_TAB], searchresultview)\n",
+        "        viewstatus = False if source == SEARCH_TAB else True\n",
+        "        switchview(nav[SEARCH_TAB], searchresultview, temp= viewstatus)\n",
         "\n",
         "# Add handlers\n",
         "\n",
@@ -4087,14 +4096,17 @@
         "    switchview(nav[IMDB_TAB], getloadingview(f'Processing IMDB advanced search page: 1.'), temp= True)\n",
         "    type_ = imdbtype_dropdown.value \n",
         "    keyword = imdbkeyword_text.value \n",
-        "    startdate = str(imdbstartdate_date.value.strftime(\"%Y-%m-%d\"))\n",
-        "    enddate = str(imdbenddate_date.value.strftime(\"%Y-%m-%d\"))\n",
-        "    maxrating = str(imdbmaxrating_float.value) \n",
-        "    minrating = str(imdbminrating_float.value) \n",
-        "    minvotes = str(imdbminvotes_int)\n",
-        "    maxvotes = str(imdbmaxvotes_int)\n",
-        "    minruntime = str(imdbminruntime_int)\n",
-        "    maxruntime = str(imdbmaxruntime_int)\n",
+        "    maxrating = imdbmaxrating_float.value \n",
+        "    minrating = imdbminrating_float.value \n",
+        "    minvotes = imdbminvotes_int.value\n",
+        "    maxvotes = imdbmaxvotes_int.value\n",
+        "    minruntime = imdbminruntime_int.value\n",
+        "    maxruntime = imdbmaxruntime_int.value\n",
+        "\n",
+        "    if imdbstartdate_date.value: startdate = str(imdbstartdate_date.value.strftime(\"%Y-%m-%d\"))  \n",
+        "    else: startdate =''\n",
+        "    if imdbenddate_date.value: enddate = str(imdbenddate_date.value.strftime(\"%Y-%m-%d\")) \n",
+        "    else: enddate =  ''\n",
         "    \n",
         "    inlists = imdbinlist_text.value\n",
         "    notinlists = imdbnotinlist_text.value\n",
@@ -4554,9 +4566,8 @@
         "bigbtn_style = {'font_size':'16px', 'font_weight':'600'}\n",
         "bigbtn_layout = {'width':'120px', 'height':'50px', 'margin': '0 0 8px 0'}\n",
         "top_btn_layout = {\"width\": '100px', 'height': '30px', 'margin': '0 0 0 60px'}\n",
-        "\n",
-        "imdbcheckboxlayout = {}\n",
-        "checkboxlabellayout = {}\n",
+        "checkboxstyle = {'description_width':'0'}\n",
+        "checkboxlabellayout = {\"width\": \"220px\", \"justify_content\": \"flex-end\"}\n",
         "\n",
         "startpause_btn = Button(disabled= True, description=\"Start\", style= bigbtn_style, layout= top_btn_layout)\n",
         "startpause_btn.layout.display =  'none'\n",
@@ -4601,6 +4612,8 @@
         "searchbackup_checkbox = Checkbox(value= False, layout= searchcheckboxs_layout)\n",
         "searchbackup_hbox = HBox((searchbackup_label, searchbackup_checkbox), layout= t_formrow_layout)\n",
         "searchbackup_hbox.layout.display = None\n",
+        "searchreplaceandmerge_label.add_class(\"label-flex\")\n",
+        "searchbackup_label.add_class(\"label-flex\")\n",
         "\n",
         "searchsaveas_text = Text(description= \"Custom Name\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
         "searchsaveas_hbox = HBox((searchsaveas_text,),layout= t_formrow_layout)\n",
@@ -4641,10 +4654,10 @@
         "imdborder_dropdown = Dropdown(description= \"Results Order\", value= DESCORDER, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= t2controls_layout, style= t2controls_style)\n",
         "imdborder_hbox = HBox((imdborder_dropdown,), layout= t_formrow_layout)\n",
         "\n",
-        "imdbstartdate_date = DatePicker(value= today, description= \"Start Date\", layout= t2controls_layout, style= t2controls_style)\n",
+        "imdbstartdate_date = DatePicker(description= \"Start Date\", layout= t2controls_layout, style= t2controls_style)\n",
         "imdbstartdate_hbox = HBox((imdbstartdate_date,), layout= t_formrow_layout)\n",
         "\n",
-        "imdbenddate_date = DatePicker(value= today-timedelta(days= 365), description= \"End Date\", layout= t2controls_layout, style= t2controls_style)\n",
+        "imdbenddate_date = DatePicker(description= \"End Date\", layout= t2controls_layout, style= t2controls_style)\n",
         "imdbenddate_hbox = HBox((imdbenddate_date,), layout= t_formrow_layout)\n",
         "\n",
         "numeric_layout = {\"width\": \"120px\"}\n",
@@ -4658,8 +4671,8 @@
         "imdbrating_label.add_class('label-flex')\n",
         "\n",
         "imdbvotes_label = Label(value= \"Votes \", layout= numericlabel_layout)\n",
-        "imdbminvotes_int = widgets.BoundedIntText(description= \"Min\", value=0, min= 0, step= 1, layout= numeric_layout, style= numeric_style)\n",
-        "imdbmaxvotes_int = widgets.BoundedIntText(description= \"Max\", value=0, min= 0, step= 1, layout= numeric_layout, style= numeric_style)\n",
+        "imdbminvotes_int = widgets.BoundedIntText(description= \"Min\", value=0, min= 0, max= 10000000, step= 1, layout= numeric_layout, style= numeric_style)\n",
+        "imdbmaxvotes_int = widgets.BoundedIntText(description= \"Max\", value=0, min= 0, max= 10000000, step= 1, layout= numeric_layout, style= numeric_style)\n",
         "imdbvotes_hbox = HBox((imdbvotes_label, imdbminvotes_int, imdbmaxvotes_int), layout= t_formrow_layout)\n",
         "imdbvotes_label.add_class('label-flex')\n",
         "\n",
@@ -4676,57 +4689,70 @@
         "imdbnotinlist_hbox = HBox((imdbnotinlist_text,),layout= t_formrow_layout)\n",
         "\n",
         "imdbtop250_label = Label(\"In Top 250\", layout= checkboxlabellayout)\n",
-        "imdbtop250_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbtop250_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbtop250_hbox = HBox((imdbtop250_label, imdbtop250_checkbox), layout= t_formrow_layout)\n",
+        "imdbtop250_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbtop1000_label = Label(\"In Top 1000\", layout= checkboxlabellayout)\n",
-        "imdbtop1000_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbtop1000_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbtop1000_hbox = HBox((imdbtop1000_label, imdbtop1000_checkbox), layout= t_formrow_layout)\n",
+        "imdbtop1000_label.add_class(\"label-flex\")\n",
         "\n",
         "imdboscarwinner_label = Label(\"Oscar Winner\", layout= checkboxlabellayout)\n",
-        "imdboscarwinner_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdboscarwinner_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdboscarwinner_hbox = HBox((imdboscarwinner_label, imdboscarwinner_checkbox), layout= t_formrow_layout)\n",
+        "imdboscarwinner_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbbestpicturewinner_label = Label(\"Best Picture Winner\", layout= checkboxlabellayout)\n",
-        "imdbbestpicturewinner_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbbestpicturewinner_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbbestpicturewinner_hbox = HBox((imdbbestpicturewinner_label, imdbbestpicturewinner_checkbox), layout= t_formrow_layout)\n",
+        "imdbbestpicturewinner_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbbestdirectorwinner_label = Label(\"Best Director Winner\", layout= checkboxlabellayout)\n",
-        "imdbbestdirectorwinner_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbbestdirectorwinner_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbbestdirectorwinner_hbox = HBox((imdbbestdirectorwinner_label, imdbbestdirectorwinner_checkbox), layout= t_formrow_layout)\n",
+        "imdbbestdirectorwinner_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbenglishonly_label = Label(\"Only English Titles\", layout= checkboxlabellayout)\n",
-        "imdbenglishonly_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbenglishonly_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbenglishonly_hbox = HBox((imdbenglishonly_label, imdbenglishonly_checkbox), layout= t_formrow_layout)\n",
+        "imdbenglishonly_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbanimationtitles_label = Label(\"Animation Titles\", layout= checkboxlabellayout)\n",
-        "imdbanimationtitles_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbanimationtitles_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbanimationtitles_hbox = HBox((imdbanimationtitles_label, imdbanimationtitles_checkbox), layout= t_formrow_layout)\n",
+        "imdbanimationtitles_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbinternationaltitles_label = Label(\"International Titles\", layout= checkboxlabellayout)\n",
-        "imdbinternationaltitles_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbinternationaltitles_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbinternationaltitles_hbox = HBox((imdbinternationaltitles_label, imdbinternationaltitles_checkbox), layout= t_formrow_layout)\n",
+        "imdbinternationaltitles_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbindiantitles_label = Label(\"Indian Titles\", layout= checkboxlabellayout)\n",
-        "imdbindiantitles_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbindiantitles_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbindiantitles_hbox = HBox((imdbindiantitles_label, imdbindiantitles_checkbox), layout= t_formrow_layout)\n",
+        "imdbindiantitles_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbfilterdownloadded_label = Label(\"Filter Downloaded\", layout= checkboxlabellayout)\n",
-        "imdbfilterdownloadded_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbfilterdownloadded_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbfilterdownloadded_hbox = HBox((imdbfilterdownloadded_label, imdbfilterdownloadded_checkbox), layout= t_formrow_layout)\n",
+        "imdbfilterdownloadded_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbfilterwatched_label = Label(\"Filter Watched\", layout= checkboxlabellayout)\n",
-        "imdbfilterwatched_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbfilterwatched_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbfilterwatched_hbox = HBox((imdbfilterwatched_label, imdbfilterwatched_checkbox), layout= t_formrow_layout)\n",
+        "imdbfilterwatched_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbreplaceandmergeoldfiles_label = Label(\"Replace and Merge Old Files\", layout= checkboxlabellayout)\n",
-        "imdbreplaceandmergeoldfiles_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbreplaceandmergeoldfiles_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbreplaceandmergeoldfiles_hbox = HBox((imdbreplaceandmergeoldfiles_label, imdbreplaceandmergeoldfiles_checkbox), layout= t_formrow_layout)\n",
+        "imdbreplaceandmergeoldfiles_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
-        "imdbbackup_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbbackup_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "imdbbackup_hbox = HBox((imdbbackup_checkbox, imdbbackup_label), layout= t_formrow_layout)\n",
         "imdbbackup_hbox.layout.display = None\n",
+        "imdbbackup_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbsearchparams_text = Text(description= \"Search Parameters\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
         "imdbsearchparams_hbox = HBox((imdbsearchparams_text,),layout= t_formrow_layout)\n",
@@ -5014,7 +5040,7 @@
         "        display(view)\n",
         "\n",
         "def updatesearchresults(result: WebResult, page): ####\n",
-        "    switchview(result.tab, getloadingview(f'Search for {types[result.attrs.type_]} \"{result.search}\" site: {result.site} page: {page}.'), temp= True)\n",
+        "    switchview(result.tab, getloadingview(f'Search for {types[result.attrs.type_]} {result.search} site: {result.site} page: {page}.'), temp= True)\n",
         "    if result.site == X1337X:\n",
         "        update1337xresult(result= result, page= page)\n",
         "    if result.site == IMDB:\n",
@@ -5565,8 +5591,6 @@
         "    for x in settings:\n",
         "        setn.append(str(x))\n",
         "    setn.sort()\n",
-        "    for x in setn:\n",
-        "        print(\"'{0}': {1},\".format(x,settings[x]))\n",
         "\n",
         "def clear_temp_pathes():\n",
         "    Delete_torrent_files = True \n",
