--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,8 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        " \n",
+        "# 34wlsa\n",
+        "\n",
         "dev = False\n",
         "\n",
         "import os, sys, platform, pytz, time, traceback, unicodedata, re, requests, random\n",
@@ -407,11 +408,11 @@
         "\n",
         "if IS_ENV_COLAB and not 'init' in globals():   \n",
         "    info(\"Installing requirments packages.\")\n",
-        "    pathestask = Thread(target= storageandpathes)\n",
-        "    pathestask.name = DRIVE_AND_PATHES\n",
-        "    config.setupthreads.add(pathestask)\n",
-        "    pathestask.start()\n",
-        "\n",
+        "    # pathestask = Thread(target= storageandpathes)\n",
+        "    # pathestask.name = DRIVE_AND_PATHES\n",
+        "    # config.setupthreads.add(pathestask)\n",
+        "    # pathestask.start()\n",
+        "    storageandpathes()\n",
         "    def setup_lt():\n",
         "        if not 'libtorrent' in config.pkgs:\n",
         "            try:\n",
@@ -782,19 +783,14 @@
         "                ), tc_line[0])\n",
         "\n",
         "            if not isinstance(tc_line[-1], Immutable):\n",
-        "                tc_line[-1] = SMALL_LAST.sub(\n",
-        "                    lambda m: m.group(0).capitalize(), tc_line[-1]\n",
-        "                )\n",
+        "                tc_line[-1] = SMALL_LAST.sub(lambda m: m.group(0).capitalize(), tc_line[-1])\n",
         "\n",
         "        result = \" \".join(tc_line)\n",
-        "\n",
         "        result = SUBPHRASE.sub(lambda m: '%s%s' % (\n",
         "            m.group(1),\n",
         "            m.group(2).capitalize()\n",
         "        ), result)\n",
-        "\n",
         "        processed.append(result)\n",
-        "\n",
         "    result = \"\\n\".join(processed)\n",
         "    return result\n",
         "\n",
@@ -934,9 +930,8 @@
         "    tab_indices = {}\n",
         "\n",
         "appstate = AppState.instance()\n",
-        "    \n",
-        "nav = {}\n",
         "\n",
+        "nav = {}\n",
         "CONFIG_TAB = 'configuration'\n",
         "SEARCH_TAB = 'search'\n",
         "IMDB_TAB = 'IMDB search'\n",
@@ -5600,11 +5595,9 @@
         "info(\"Cell execution done.\")\n",
         "release()\n",
         "\n",
-        "if IS_ENV_COLAB:\n",
-        "    output.clear() \n",
-        "\n",
         "js = makeclickjs(UICLICKER_RUN, 200, use_evaljs= False, enable_console= False, getstr= True)\n",
         "if not dev:\n",
+        "    #if IS_ENV_COLAB:  output.clear() \n",
         "    display(container, Javascript(js))\n",
         "\n",
         "# using Javascript is persisted in the output\n",
