--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -216,22 +216,17 @@
         "\n",
         "    savetoftpconst = 1\n",
         "    savetogdriveconst = 2\n",
-        "\n",
         "    savetoftp = False\n",
         "    driveenabled = False\n",
-        "\n",
         "    ltenabled = True\n",
         "    activedownloads = 5\n",
         "    spotifyenabled = False\n",
-        "    \n",
         "    gdriveenabled = False\n",
         "    ftpenabled = True\n",
         "    backupenabled = False\n",
-        "    \n",
         "    ftpuser = None\n",
         "    ftppassword = None\n",
         "    ftphost = None\n",
-        "\n",
         "    localdownloadbase = None\n",
         "    remotedownloadbase = None\n",
         "    general_path = None\n",
@@ -243,7 +238,6 @@
         "    musicbackups = None\n",
         "    generalbackups = None\n",
         "    uncompleted_sources = None\n",
-        "\n",
         "    setupthreads= set()\n",
         "    pkgs = set()\n",
         "    international_titles_list = \"ls560608427\"\n",
@@ -456,7 +450,6 @@
         "import panel\n",
         "from bokeh.models.widgets.tables import CheckboxEditor\n",
         "panel.extension('tabulator')\n",
-        "\n",
         "from IPython.display import Javascript\n",
         "import ipywidgets as widgets\n",
         "from ipywidgets import VBox, HBox, Box, HTML, Text, FloatProgress, Button, Label, Dropdown, DatePicker, Checkbox, Layout\n",
@@ -888,7 +881,6 @@
         "\n",
         "contains = lambda string, search: search.lower() in string.lower()\n",
         "time_str = lambda sec: time.strftime('%H:%M:%S', time.gmtime(sec))\n",
-        "\n",
         "ByteToGB = lambda n: RoundTo1(n / 1073741824)\n",
         "ByteToMB = lambda n: RoundTo1(n/ 1048576)\n",
         "ByteToKB = lambda n: RoundTo1(n/ 1024)\n",
@@ -929,7 +921,6 @@
         "    tab_indices = {}\n",
         "\n",
         "appstate = AppState.instance()\n",
-        "\n",
         "nav = {}\n",
         "CONFIG_TAB = 'configuration'\n",
         "SEARCH_TAB = 'search'\n",
@@ -1047,7 +1038,7 @@
         "RARBG_MOVIE_H264_4K = 50\n",
         "RARBG_MOVIE_H265_4K = 51\n",
         "RARBG_MOVIE_H264_4K_HDR = 52\n",
-        "RARBG_MOVIE_H264 = [RARBG_MOVIE_H265_1080P, RARBG_MOVIE_H265_4K,  RARBG_MOVIE_H264_4K_HDR]\n",
+        "RARBG_MOVIE_H265 = [RARBG_MOVIE_H265_1080P, RARBG_MOVIE_H265_4K,  RARBG_MOVIE_H264_4K_HDR]\n",
         "RARBG_MOVIE_ISOFULL_HD = 42\n",
         "RARBG_MOVIE_HD_REMUX = 46\n",
         "RARBG_TV_EPISODES = 18\n",
@@ -1062,7 +1053,7 @@
         "RARBG_GAMES_XBOX = 32\n",
         "RARBG_SOFTWARE = 33\n",
         "RARBG_EBOOK = 35\n",
-        "RARBG_MOVIE = [RARBG_MOVIE_H264] + RARBG_MOVIE_H264\n",
+        "RARBG_MOVIE = [RARBG_MOVIE_H264] + RARBG_MOVIE_H265\n",
         "RARBG_TV = [RARBG_TV_EPISODES, RARBG_TV_EPISODES_HD, RARBG_TV_EPISODES_UHD]\n",
         "SORTRARBG_SEEDERS = 'seeders'\n",
         "SORTRARBG_TIME = 'last'\n",
@@ -1333,8 +1324,8 @@
         "resultstablebuttons = {\"Download\": downloadbtn}\n",
         "\n",
         "imdbresultstableformatters = {}\n",
-        "imdbresultstablecolumnwidths={\"Title\":'28%',  \"Director\": '10%', \"Staring\": '20%',\"Genres\": '15%', \"Rating\": '5%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \" \": '5%'}\n",
-        "imdbresultstablecolumnalignments={'Title': 'left', 'Director': 'left', 'Staring': 'left', 'Genres': 'left', 'Rating': 'center', 'Votes': 'center', \"Runtime\": 'center', \"Downloaded\": 'center', \" \": \"center\"}\n",
+        "imdbresultstablecolumnwidths={\"Title\":'21%',  \"Director\": '10%', \"Staring\": '20%',\"Genres\": '15%', \"Rating\": '5%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \"Watched\": '7%', \" \": '5%'}\n",
+        "imdbresultstablecolumnalignments={'Title': 'left', 'Director': 'left', 'Staring': 'left', 'Genres': 'left', 'Rating': 'center', 'Votes': 'center', \"Runtime\": 'center', \"Downloaded\": 'center', \"Watched\": 'center', \" \": \"center\"}\n",
         "\n",
         "icon_css = \"\"\"background: url( \"data:image/svg+xml,%3Csvg%20id%3D%22download-svg%22%20width%3D%2225px%22%20height%3D%2225px%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20opacity%3D%220.5%22%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M3%2014.25C3.41421%2014.25%203.75%2014.5858%203.75%2015C3.75%2016.4354%203.75159%2017.4365%203.85315%2018.1919C3.9518%2018.9257%204.13225%2019.3142%204.40901%2019.591C4.68577%2019.8678%205.07435%2020.0482%205.80812%2020.1469C6.56347%2020.2484%207.56459%2020.25%209%2020.25H15C16.4354%2020.25%2017.4365%2020.2484%2018.1919%2020.1469C18.9257%2020.0482%2019.3142%2019.8678%2019.591%2019.591C19.8678%2019.3142%2020.0482%2018.9257%2020.1469%2018.1919C20.2484%2017.4365%2020.25%2016.4354%2020.25%2015C20.25%2014.5858%2020.5858%2014.25%2021%2014.25C21.4142%2014.25%2021.75%2014.5858%2021.75%2015V15.0549C21.75%2016.4225%2021.75%2017.5248%2021.6335%2018.3918C21.5125%2019.2919%2021.2536%2020.0497%2020.6517%2020.6516C20.0497%2021.2536%2019.2919%2021.5125%2018.3918%2021.6335C17.5248%2021.75%2016.4225%2021.75%2015.0549%2021.75H8.94513C7.57754%2021.75%206.47522%2021.75%205.60825%2021.6335C4.70814%2021.5125%203.95027%2021.2536%203.34835%2020.6517C2.74643%2020.0497%202.48754%2019.2919%202.36652%2018.3918C2.24996%2017.5248%202.24998%2016.4225%202.25%2015.0549C2.25%2015.0366%202.25%2015.0183%202.25%2015C2.25%2014.5858%202.58579%2014.25%203%2014.25Z%22%20fill%3D%22%231C274C%22%2F%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M12%2016.75C12.2106%2016.75%2012.4114%2016.6615%2012.5535%2016.5061L16.5535%2012.1311C16.833%2011.8254%2016.8118%2011.351%2016.5061%2011.0715C16.2004%2010.792%2015.726%2010.8132%2015.4465%2011.1189L12.75%2014.0682V3C12.75%202.58579%2012.4142%202.25%2012%202.25C11.5858%202.25%2011.25%202.58579%2011.25%203V14.0682L8.55353%2011.1189C8.27403%2010.8132%207.79963%2010.792%207.49393%2011.0715C7.18823%2011.351%207.16698%2011.8254%207.44648%2012.1311L11.4465%2016.5061C11.5886%2016.6615%2011.7894%2016.75%2012%2016.75Z%22%20fill%3D%22%231C274C%22%2F%3E%3C%2Fsvg%3E\" );\"\"\"\n",
         "download_css = \"\"\"  font-size: 20px;\n",
@@ -1347,7 +1338,6 @@
         "class WebResult:\n",
         "    def __init__(self) -> None: \n",
         "        self.resultpages = dict()\n",
-        "\n",
         "    attrs = None\n",
         "    sort = None\n",
         "    results: list[DownloadResult|IMDBTitle] = None\n",
@@ -1388,7 +1378,7 @@
         "    def applytablestyle(self):\n",
         "        pass\n",
         "\n",
-        "class IMDBResult(WebResult): #obj values used in class attribute definitions shouold be defined before, in function/methods it shouldn't.\n",
+        "class IMDBResult(WebResult): #obj values used in class attribute definitions should be defined before, in function/methods it shouldn't.\n",
         "    def __init__(self) -> None:\n",
         "        super().__init__()\n",
         "        self.resultstablecolumnwidths = imdbresultstablecolumnwidths\n",
@@ -1398,7 +1388,6 @@
         "        self.site = IMDB\n",
         "        self.downloadedtitlespages = dict()\n",
         "        self.watchedtitlespages = dict()\n",
-        "\n",
         "    results: list[IMDBTitle] = None\n",
         "    params: IMDBParams \n",
         "    downloadedcount = 0\n",
@@ -1417,7 +1406,7 @@
         "            search_process(site= params.sites[0], search= search, attrs= self.attrs, category= params.sitecategory, sort= SEEDERSSORT, order= DESCORDER, page= 1, source= IMDB_TAB)\n",
         "\n",
         "    def getdataframe(self):\n",
-        "        resulttablesource = {\"Title\":[],  \"Director\": [], \"Staring\": [],\"Genres\": [], \"Rating\": [], \"Votes\": [], \"Runtime\": [], \"Downloaded\": [], \" \": []}\n",
+        "        resulttablesource = {\"Title\":[],  \"Director\": [], \"Staring\": [],\"Genres\": [], \"Rating\": [], \"Votes\": [], \"Runtime\": [], \"Downloaded\": [], \"Watched\": [],\" \": []}\n",
         "        for result in self.results:\n",
         "            resulttablesource['Title'].append(result.title)\n",
         "            resulttablesource['Director'].append(result.director)\n",
@@ -1427,6 +1416,7 @@
         "            resulttablesource['Votes'].append(result.votes)\n",
         "            resulttablesource['Runtime'].append(result.runtime)\n",
         "            resulttablesource['Downloaded'].append(\"Downloaded\" if result.downloaded else \"\")\n",
+        "            resulttablesource['Watched'].append(\"Watched\" if result.watched else \"\")\n",
         "            resulttablesource[' '].append(' ⤓ ')\n",
         "        return pd.DataFrame(resulttablesource)\n",
         "    \n",
@@ -5038,7 +5028,7 @@
         "                                            formatters= result.resultstableformatters,\n",
         "                                            configuration= {\n",
         "                                            'rowHeight': 30,\n",
-        "                                            'columnDefaults': {'headerSort': False,}})\n",
+        "                                            'columnDefaults': {'headerSort': True,}})\n",
         "    result.applytablestyle()\n",
         "    result.table.on_click(result.actionhandler)\n",
         "    return result.table\n",
