--- a/hydraulic.v2.8.2
+++ b/hydraulic.v2.8.2
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        " \n",
+        "# \n",
         "dev = False\n",
         "\n",
         "import os, sys, platform, pytz, time, traceback, unicodedata, re, requests, random\n",
@@ -19,8 +19,9 @@
         "from datetime import date, datetime, timedelta\n",
         "from threading import Thread\n",
         "from ipywidgets import Output\n",
-        "\n",
         "pytz.timezone('Turkey')\n",
+        "    \n",
+        "# Platform\n",
         "\n",
         "td_id = \"TD1\"\n",
         "td_email = \"default@mail.com\"\n",
@@ -38,24 +39,10 @@
         "WINDOWS = 'Windows'\n",
         "LINUX = 'Linux'\n",
         "\n",
-        "# Drive\n",
-        "\n",
         "if IS_ENV_COLAB:\n",
         "    time.tzset()\n",
         "    from google.colab import output, drive\n",
         "    from google.colab.output import eval_js \n",
-        "    with hide:\n",
-        "        if not os.path.exists(\"/content/drive\"):\n",
-        "            drive.mount('/content/drive')        \n",
-        "    if os.path.exists(\"/content/sample_data\"): \n",
-        "        !rm -r \"/content/sample_data\"\n",
-        "\n",
-        "if os.path.exists(\"/content/drive\"):\n",
-        "    IS_DRIVE_ENABLED = True\n",
-        "else:\n",
-        "    IS_DRIVE_ENABLED = False\n",
-        "    \n",
-        "# Platform\n",
         "\n",
         "ENV_OS = platform.uname().system\n",
         "if ENV_OS == WINDOWS:\n",
@@ -204,19 +191,6 @@
         "    info(f\"New Session.\")\n",
         "\n",
         "#### Setup\n",
-        "    \n",
-        "LOCALBASE_DEFAULT = '/content' if ENV_OS == LINUX else \"c:/td\"\n",
-        "FTPBASE_DEFAULT = '/'\n",
-        "\n",
-        "if IS_ENV_COLAB and IS_DRIVE_ENABLED:\n",
-        "    DOWNLLOADSBASE_DEFAULT = \"/drive/MyDrive\"\n",
-        "else:\n",
-        "    DOWNLLOADSBASE_DEFAULT = \"/Downloads\"\n",
-        "\n",
-        "MOVIES_DRIVE_PATH_DEFAULT = f'{LOCALBASE_DEFAULT + DOWNLLOADSBASE_DEFAULT}/Movies' \n",
-        "TV_DRIVE_PATH_DEFAULT = f'{LOCALBASE_DEFAULT + DOWNLLOADSBASE_DEFAULT}/TV' \n",
-        "GENERAL_DRIVE_PATH_DEFAULT = f'{LOCALBASE_DEFAULT + DOWNLLOADSBASE_DEFAULT}'\n",
-        "MUSIC_DRIVE_PATH_DEFAULT = f'{LOCALBASE_DEFAULT + DOWNLLOADSBASE_DEFAULT}/Music'\n",
         "\n",
         "downloads_dict = {}\n",
         "active = []\n",
@@ -242,36 +216,28 @@
         "\n",
         "    savetoftpconst = 1\n",
         "    savetogdriveconst = 2\n",
-        "\n",
         "    savetoftp = False\n",
-        "    savetogdrive = False\n",
-        "\n",
+        "    driveenabled = False\n",
         "    ltenabled = True\n",
         "    activedownloads = 5\n",
         "    spotifyenabled = False\n",
-        "    \n",
         "    gdriveenabled = False\n",
         "    ftpenabled = True\n",
         "    backupenabled = False\n",
-        "    \n",
-        "    ftpuser = \"\"\n",
-        "    ftppassword = \"\"\n",
-        "    ftphost = \"\"\n",
-        "\n",
-        "    localdownloadbase = LOCALBASE_DEFAULT\n",
-        "    remotedownloadbase = FTPBASE_DEFAULT\n",
-        "\n",
-        "    general_path = GENERAL_DRIVE_PATH_DEFAULT\n",
-        "    music_path = MUSIC_DRIVE_PATH_DEFAULT\n",
-        "    movies_path = MOVIES_DRIVE_PATH_DEFAULT\n",
-        "    tv_path = TV_DRIVE_PATH_DEFAULT\n",
-        "    \n",
+        "    ftpuser = None\n",
+        "    ftppassword = None\n",
+        "    ftphost = None\n",
+        "    localdownloadbase = None\n",
+        "    remotedownloadbase = None\n",
+        "    general_path = None\n",
+        "    music_path = None\n",
+        "    movies_path = None\n",
+        "    tv_path = None\n",
         "    moviesbackups = None\n",
         "    tvbackups = None\n",
         "    musicbackups = None\n",
         "    generalbackups = None\n",
         "    uncompleted_sources = None\n",
-        "\n",
         "    setupthreads= set()\n",
         "    pkgs = set()\n",
         "    international_titles_list = \"ls560608427\"\n",
@@ -291,16 +257,33 @@
         "\n",
         "config.pkgs = get_installed_pip_pkgs()\n",
         "\n",
-        "def enablegdrive():\n",
+        "def storageandpathes():\n",
         "    if IS_ENV_COLAB and not os.path.exists(\"/content/drive\"):\n",
-        "        drive.mount('/content/drive')\n",
-        "        if os.path.exists(\"/content/drive\"):\n",
-        "            info(\"Google drive is mounted.\")\n",
-        "            config.savetogdrive = True\n",
-        "        else:\n",
-        "            config.savetogdrive = False\n",
+        "        with hide:\n",
+        "            drive.mount('/content/drive')\n",
+        "    if os.path.exists(\"/content/drive\"):\n",
+        "        info(\"Google drive is mounted.\")\n",
+        "        config.driveenabled = True\n",
+        "    else:\n",
+        "        config.driveenabled = False\n",
+        "    setuppathes()\n",
         "\n",
         "def setuppathes():    \n",
+        "    global LOCALBASE_DEFAULT, FTPBASE_DEFAULT, DOWNLLOADSBASE_DEFAULT, MOVIES_PATH_DEFAULT, TV_PATH_DEFAULT, GENERAL_PATH_DEFAULT, MUSIC_PATH_DEFAULT\n",
+        "    LOCALBASE_DEFAULT = '/content' if ENV_OS == LINUX else \"c:/td\"\n",
+        "    FTPBASE_DEFAULT = '/'\n",
+        "    if IS_ENV_COLAB and config.driveenabled:  DOWNLLOADSBASE_DEFAULT = \"/drive/MyDrive\"\n",
+        "    else:  DOWNLLOADSBASE_DEFAULT = \"/Downloads\"\n",
+        "    MOVIES_PATH_DEFAULT = f'{LOCALBASE_DEFAULT + DOWNLLOADSBASE_DEFAULT}/Movies' \n",
+        "    TV_PATH_DEFAULT = f'{LOCALBASE_DEFAULT + DOWNLLOADSBASE_DEFAULT}/TV' \n",
+        "    GENERAL_PATH_DEFAULT = f'{LOCALBASE_DEFAULT + DOWNLLOADSBASE_DEFAULT}'\n",
+        "    MUSIC_PATH_DEFAULT = f'{LOCALBASE_DEFAULT + DOWNLLOADSBASE_DEFAULT}/Music'\n",
+        "\n",
+        "    config.localdownloadbase = LOCALBASE_DEFAULT\n",
+        "    config.movies_path = MOVIES_PATH_DEFAULT\n",
+        "    config.tv_path = TV_PATH_DEFAULT\n",
+        "    config.general_path = GENERAL_PATH_DEFAULT\n",
+        "    config.music_path = MUSIC_PATH_DEFAULT\n",
         "    config.moviesbackups = set()\n",
         "    config.tvbackups = set()\n",
         "    config.musicbackups = set()\n",
@@ -394,6 +377,7 @@
         "                title = find_title(title_raw, year_raw)      \n",
         "                watched_movies_list.append(title)\n",
         "        info(f\"Scrapped watched movies: {len(watched_movies_list)} movie.\")\n",
+        "        appstate.watchedlistready = True\n",
         "    except Exception as e:\n",
         "        error(ex())\n",
         "    \n",
@@ -411,16 +395,17 @@
         "        hide.clear_output()\n",
         "    return True\n",
         "\n",
-        "SETUP_TITLE = \"setup_title\"\n",
         "SETUP_LT = \"setup_lt\"\n",
         "DRIVE_AND_PATHES = \"enable_drive\"\n",
         "SCRAPE_WATCHED_LIST = \"scrape_watched_list\"\n",
         "\n",
         "if IS_ENV_COLAB and not 'init' in globals():   \n",
-        "    if os.path.exists(\"/content/drive\"):\n",
-        "        info(\"Google drive is mounted.\")\n",
-        "\n",
         "    info(\"Installing requirments packages.\")\n",
+        "    # pathestask = Thread(target= storageandpathes)\n",
+        "    # pathestask.name = DRIVE_AND_PATHES\n",
+        "    # config.setupthreads.add(pathestask)\n",
+        "    # pathestask.start()\n",
+        "    storageandpathes()\n",
         "    def setup_lt():\n",
         "        if not 'libtorrent' in config.pkgs:\n",
         "            try:\n",
@@ -436,30 +421,26 @@
         "                info(\"Package 'libtorrent' was installed and in imported to environment.\")\n",
         "                enablelt()      \n",
         "        else:\n",
-        "            info(\"Package 'lt' is already installed.'\")                    \n",
+        "            info(\"Package 'lt' is already installed.'\")\n",
+        "        appstate.ltready = True                \n",
         "        release()\n",
         "\n",
         "    enable_lt_task = Thread(target= setup_lt)\n",
         "    enable_lt_task.name = SETUP_LT\n",
         "    config.setupthreads.add(enable_lt_task)\n",
         "    enable_lt_task.start()\n",
-        "\n",
         "    if not watched_movies_list:\n",
         "        scrape_watchedmovielist_task = Thread(target= scrape_watched_movies_list, args=(1,2))\n",
         "        scrape_watchedmovielist_task.name = SCRAPE_WATCHED_LIST\n",
         "        config.setupthreads.add(scrape_watchedmovielist_task)\n",
         "        scrape_watchedmovielist_task.start()\n",
         "\n",
-        "    pathestask = Thread(target= setuppathes)\n",
-        "    pathestask.start()\n",
-        "\n",
         "def arethreadsworking(threadset: set[Thread], v= False):\n",
         "    alivethreads = set()\n",
         "    for thread in threadset:\n",
         "        if thread.is_alive():\n",
         "            alivethreads.add(thread.name)\n",
-        "            if v:\n",
-        "                print(f'Alive: {thread.name}')\n",
+        "            if v:  print(f'Alive: {thread.name}')\n",
         "    return alivethreads if alivethreads else False\n",
         "\n",
         "##\n",
@@ -469,7 +450,6 @@
         "import panel\n",
         "from bokeh.models.widgets.tables import CheckboxEditor\n",
         "panel.extension('tabulator')\n",
-        "\n",
         "from IPython.display import Javascript\n",
         "import ipywidgets as widgets\n",
         "from ipywidgets import VBox, HBox, Box, HTML, Text, FloatProgress, Button, Label, Dropdown, DatePicker, Checkbox, Layout\n",
@@ -795,19 +775,14 @@
         "                ), tc_line[0])\n",
         "\n",
         "            if not isinstance(tc_line[-1], Immutable):\n",
-        "                tc_line[-1] = SMALL_LAST.sub(\n",
-        "                    lambda m: m.group(0).capitalize(), tc_line[-1]\n",
-        "                )\n",
+        "                tc_line[-1] = SMALL_LAST.sub(lambda m: m.group(0).capitalize(), tc_line[-1])\n",
         "\n",
         "        result = \" \".join(tc_line)\n",
-        "\n",
         "        result = SUBPHRASE.sub(lambda m: '%s%s' % (\n",
         "            m.group(1),\n",
         "            m.group(2).capitalize()\n",
         "        ), result)\n",
-        "\n",
         "        processed.append(result)\n",
-        "\n",
         "    result = \"\\n\".join(processed)\n",
         "    return result\n",
         "\n",
@@ -906,7 +881,6 @@
         "\n",
         "contains = lambda string, search: search.lower() in string.lower()\n",
         "time_str = lambda sec: time.strftime('%H:%M:%S', time.gmtime(sec))\n",
-        "\n",
         "ByteToGB = lambda n: RoundTo1(n / 1073741824)\n",
         "ByteToMB = lambda n: RoundTo1(n/ 1048576)\n",
         "ByteToKB = lambda n: RoundTo1(n/ 1024)\n",
@@ -923,6 +897,10 @@
         "        AppState._state = self\n",
         "    _state = None\n",
         "    running = False\n",
+        "    ltready = False\n",
+        "    watchedlistready = False\n",
+        "    driveready = False\n",
+        "    ftpready = False\n",
         "    currentviewcontainer = None\n",
         "    monitorthread: Thread = None\n",
         "    monitoralive= False\n",
@@ -943,9 +921,7 @@
         "    tab_indices = {}\n",
         "\n",
         "appstate = AppState.instance()\n",
-        "    \n",
         "nav = {}\n",
-        "\n",
         "CONFIG_TAB = 'configuration'\n",
         "SEARCH_TAB = 'search'\n",
         "IMDB_TAB = 'IMDB search'\n",
@@ -1062,7 +1038,7 @@
         "RARBG_MOVIE_H264_4K = 50\n",
         "RARBG_MOVIE_H265_4K = 51\n",
         "RARBG_MOVIE_H264_4K_HDR = 52\n",
-        "RARBG_MOVIE_H264 = [RARBG_MOVIE_H265_1080P, RARBG_MOVIE_H265_4K,  RARBG_MOVIE_H264_4K_HDR]\n",
+        "RARBG_MOVIE_H265 = [RARBG_MOVIE_H265_1080P, RARBG_MOVIE_H265_4K,  RARBG_MOVIE_H264_4K_HDR]\n",
         "RARBG_MOVIE_ISOFULL_HD = 42\n",
         "RARBG_MOVIE_HD_REMUX = 46\n",
         "RARBG_TV_EPISODES = 18\n",
@@ -1077,7 +1053,7 @@
         "RARBG_GAMES_XBOX = 32\n",
         "RARBG_SOFTWARE = 33\n",
         "RARBG_EBOOK = 35\n",
-        "RARBG_MOVIE = [RARBG_MOVIE_H264] + RARBG_MOVIE_H264\n",
+        "RARBG_MOVIE = [RARBG_MOVIE_H264] + RARBG_MOVIE_H265\n",
         "RARBG_TV = [RARBG_TV_EPISODES, RARBG_TV_EPISODES_HD, RARBG_TV_EPISODES_UHD]\n",
         "SORTRARBG_SEEDERS = 'seeders'\n",
         "SORTRARBG_TIME = 'last'\n",
@@ -1348,8 +1324,8 @@
         "resultstablebuttons = {\"Download\": downloadbtn}\n",
         "\n",
         "imdbresultstableformatters = {}\n",
-        "imdbresultstablecolumnwidths={\"Title\":'28%',  \"Director\": '10%', \"Staring\": '20%',\"Genres\": '15%', \"Rating\": '5%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \" \": '5%'}\n",
-        "imdbresultstablecolumnalignments={'Title': 'left', 'Director': 'left', 'Staring': 'left', 'Genres': 'left', 'Rating': 'center', 'Votes': 'center', \"Runtime\": 'center', \"Downloaded\": 'center', \" \": \"center\"}\n",
+        "imdbresultstablecolumnwidths={\"Title\":'21%',  \"Director\": '10%', \"Staring\": '20%',\"Genres\": '15%', \"Rating\": '5%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \"Watched\": '7%', \" \": '5%'}\n",
+        "imdbresultstablecolumnalignments={'Title': 'left', 'Director': 'left', 'Staring': 'left', 'Genres': 'left', 'Rating': 'center', 'Votes': 'center', \"Runtime\": 'center', \"Downloaded\": 'center', \"Watched\": 'center', \" \": \"center\"}\n",
         "\n",
         "icon_css = \"\"\"background: url( \"data:image/svg+xml,%3Csvg%20id%3D%22download-svg%22%20width%3D%2225px%22%20height%3D%2225px%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20opacity%3D%220.5%22%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M3%2014.25C3.41421%2014.25%203.75%2014.5858%203.75%2015C3.75%2016.4354%203.75159%2017.4365%203.85315%2018.1919C3.9518%2018.9257%204.13225%2019.3142%204.40901%2019.591C4.68577%2019.8678%205.07435%2020.0482%205.80812%2020.1469C6.56347%2020.2484%207.56459%2020.25%209%2020.25H15C16.4354%2020.25%2017.4365%2020.2484%2018.1919%2020.1469C18.9257%2020.0482%2019.3142%2019.8678%2019.591%2019.591C19.8678%2019.3142%2020.0482%2018.9257%2020.1469%2018.1919C20.2484%2017.4365%2020.25%2016.4354%2020.25%2015C20.25%2014.5858%2020.5858%2014.25%2021%2014.25C21.4142%2014.25%2021.75%2014.5858%2021.75%2015V15.0549C21.75%2016.4225%2021.75%2017.5248%2021.6335%2018.3918C21.5125%2019.2919%2021.2536%2020.0497%2020.6517%2020.6516C20.0497%2021.2536%2019.2919%2021.5125%2018.3918%2021.6335C17.5248%2021.75%2016.4225%2021.75%2015.0549%2021.75H8.94513C7.57754%2021.75%206.47522%2021.75%205.60825%2021.6335C4.70814%2021.5125%203.95027%2021.2536%203.34835%2020.6517C2.74643%2020.0497%202.48754%2019.2919%202.36652%2018.3918C2.24996%2017.5248%202.24998%2016.4225%202.25%2015.0549C2.25%2015.0366%202.25%2015.0183%202.25%2015C2.25%2014.5858%202.58579%2014.25%203%2014.25Z%22%20fill%3D%22%231C274C%22%2F%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M12%2016.75C12.2106%2016.75%2012.4114%2016.6615%2012.5535%2016.5061L16.5535%2012.1311C16.833%2011.8254%2016.8118%2011.351%2016.5061%2011.0715C16.2004%2010.792%2015.726%2010.8132%2015.4465%2011.1189L12.75%2014.0682V3C12.75%202.58579%2012.4142%202.25%2012%202.25C11.5858%202.25%2011.25%202.58579%2011.25%203V14.0682L8.55353%2011.1189C8.27403%2010.8132%207.79963%2010.792%207.49393%2011.0715C7.18823%2011.351%207.16698%2011.8254%207.44648%2012.1311L11.4465%2016.5061C11.5886%2016.6615%2011.7894%2016.75%2012%2016.75Z%22%20fill%3D%22%231C274C%22%2F%3E%3C%2Fsvg%3E\" );\"\"\"\n",
         "download_css = \"\"\"  font-size: 20px;\n",
@@ -1362,7 +1338,6 @@
         "class WebResult:\n",
         "    def __init__(self) -> None: \n",
         "        self.resultpages = dict()\n",
-        "\n",
         "    attrs = None\n",
         "    sort = None\n",
         "    results: list[DownloadResult|IMDBTitle] = None\n",
@@ -1403,7 +1378,7 @@
         "    def applytablestyle(self):\n",
         "        pass\n",
         "\n",
-        "class IMDBResult(WebResult): #obj values used in class attribute definitions shouold be defined before, in function/methods it shouldn't.\n",
+        "class IMDBResult(WebResult): #obj values used in class attribute definitions should be defined before, in function/methods it shouldn't.\n",
         "    def __init__(self) -> None:\n",
         "        super().__init__()\n",
         "        self.resultstablecolumnwidths = imdbresultstablecolumnwidths\n",
@@ -1413,7 +1388,6 @@
         "        self.site = IMDB\n",
         "        self.downloadedtitlespages = dict()\n",
         "        self.watchedtitlespages = dict()\n",
-        "\n",
         "    results: list[IMDBTitle] = None\n",
         "    params: IMDBParams \n",
         "    downloadedcount = 0\n",
@@ -1424,15 +1398,15 @@
         "    def actionhandler(self, e):\n",
         "        params = self.params\n",
         "        if e.column == ' ':\n",
-        "            result: IMDBResult = self.results[e.row]\n",
+        "            result: IMDBTitle = self.results[e.row]\n",
         "            info(f'Searching download {result.title} from IMDB search.')\n",
-        "            search = f\"{result.title} {result.params.siteparameters}\"\n",
+        "            search = f\"{result.title} {self.params.siteparameters}\"\n",
         "            switchview(nav[SEARCH_TAB], getloadingview( f'Search for {types[self.attrs.type_]} \"{result.title}\" site: {params.sites[0]} page: 1.'), temp= True)\n",
         "            maintabs.selected_index = appstate.tab_indices[SEARCH_TAB]\n",
         "            search_process(site= params.sites[0], search= search, attrs= self.attrs, category= params.sitecategory, sort= SEEDERSSORT, order= DESCORDER, page= 1, source= IMDB_TAB)\n",
         "\n",
         "    def getdataframe(self):\n",
-        "        resulttablesource = {\"Title\":[],  \"Director\": [], \"Staring\": [],\"Genres\": [], \"Rating\": [], \"Votes\": [], \"Runtime\": [], \"Downloaded\": [], \" \": []}\n",
+        "        resulttablesource = {\"Title\":[],  \"Director\": [], \"Staring\": [],\"Genres\": [], \"Rating\": [], \"Votes\": [], \"Runtime\": [], \"Downloaded\": [], \"Watched\": [],\" \": []}\n",
         "        for result in self.results:\n",
         "            resulttablesource['Title'].append(result.title)\n",
         "            resulttablesource['Director'].append(result.director)\n",
@@ -1442,6 +1416,7 @@
         "            resulttablesource['Votes'].append(result.votes)\n",
         "            resulttablesource['Runtime'].append(result.runtime)\n",
         "            resulttablesource['Downloaded'].append(\"Downloaded\" if result.downloaded else \"\")\n",
+        "            resulttablesource['Watched'].append(\"Watched\" if result.watched else \"\")\n",
         "            resulttablesource[' '].append(' ⤓ ')\n",
         "        return pd.DataFrame(resulttablesource)\n",
         "    \n",
@@ -3967,16 +3942,16 @@
         "        config.ftppassword = configview1r1v3ftppass_text.value \n",
         "    config.gdriveenabled = configview1r1v2gdrivetoggle_checkbox.value\n",
         "    if config.gdriveenabled and IS_ENV_COLAB :\n",
-        "        enablegdrive()\n",
-        "    #\n",
+        "        storageandpathes()\n",
+        "    \n",
         "    config.localdownloadbase = configview1r2v1localbase_text.value.strip()\n",
         "    config.remotedownloadbase = configview1r2v1remotebase_text.value.strip()\n",
         "\n",
         "    config.general_path = configview1r2v2generallib_text.value.strip()\n",
         "    config.movies_path = configview1r2v3movielib_text.value.strip()\n",
         "    config.tv_path = configview1r2v3tvlib_text.value.strip()\n",
-        "    config.config.music_path = configview1r2v2musiclib_text.value.strip()\n",
-        "    #\n",
+        "    config.music_path = configview1r2v2musiclib_text.value.strip()\n",
+        "    \n",
         "    bkgeneral = configview1r3v2bkgenerallib_text.value.strip()\n",
         "    if bkgeneral: config.generalbackups.add(bkgeneral)\n",
         "\n",
@@ -4605,11 +4580,11 @@
         "searchorder_hbox = HBox((searchorder_dropdown,), layout= t_formrow_layout)\n",
         "\n",
         "searchreplaceandmerge_label = Label(\"Replace Existing\", layout= checkboxlabellayout)\n",
-        "searchreplaceandmerge_checkbox = Checkbox(value= False, layout= searchcheckboxs_layout)\n",
+        "searchreplaceandmerge_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "searchreplace_hbox = HBox((searchreplaceandmerge_label, searchreplaceandmerge_checkbox), layout= t_formrow_layout)\n",
         "\n",
         "searchbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
-        "searchbackup_checkbox = Checkbox(value= False, layout= searchcheckboxs_layout)\n",
+        "searchbackup_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "searchbackup_hbox = HBox((searchbackup_label, searchbackup_checkbox), layout= t_formrow_layout)\n",
         "searchbackup_hbox.layout.display = None\n",
         "searchreplaceandmerge_label.add_class(\"label-flex\")\n",
@@ -4651,7 +4626,7 @@
         "imdbsort_dropdown = Dropdown(description= \"Results Sort\", value= IMDB_DATE_SORT ,options= [(\"By User Rating\", IMDB_RATING_SORT), (\"By Date\", IMDB_DATE_SORT), (\"Alphabetically\", IMDB_ALPHABETICAL_SORT)], layout= t2controls_layout, style= t2controls_style)\n",
         "imdbsort_hbox = HBox((imdbsort_dropdown,), layout= t_formrow_layout)\n",
         "\n",
-        "imdborder_dropdown = Dropdown(description= \"Results Order\", value= DESCORDER, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= t2controls_layout, style= t2controls_style)\n",
+        "imdborder_dropdown = Dropdown(description= \"Results Order\", value= ASCORDER, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= t2controls_layout, style= t2controls_style)\n",
         "imdborder_hbox = HBox((imdborder_dropdown,), layout= t_formrow_layout)\n",
         "\n",
         "imdbstartdate_date = DatePicker(description= \"Start Date\", layout= t2controls_layout, style= t2controls_style)\n",
@@ -4815,11 +4790,13 @@
         "addtype_dropdown = Dropdown(description= \"Download Type\", value= MOVIE ,options= [('General', GENERAL), ('Movie', MOVIE), ('Episode', EPISODE), ('Season', SEASON), ('TV Show', SHOW), ('Music Album', ALBUM), ('Song', TRACK)], layout= t2controls_layout, style= t2controls_style)\n",
         "addtype_hbox = HBox((addtype_dropdown,), layout= t_formrow_layout)\n",
         "\n",
-        "addreplacemerge_checkbox = Checkbox(description= \"Replace and Merge Existing\", value= False, layout= searchcheckboxs_layout, style= t2controls_style)\n",
-        "addreplacemerge_hbox = HBox((addreplacemerge_checkbox,), layout= t_formrow_layout)\n",
+        "addreplacemerge_label = Label(\"Replace and Merge Existing\", layout= checkboxlabellayout)\n",
+        "addreplacemerge_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
+        "addreplacemerge_hbox = HBox((addreplacemerge_label, addreplacemerge_checkbox,), layout= t_formrow_layout)\n",
         "\n",
-        "addbackup_checkbox = Checkbox(description= \"Save Backup\", value= False, layout= searchcheckboxs_layout, style= t2controls_style)\n",
-        "addbackup_hbox = HBox((addbackup_checkbox,), layout= t_formrow_layout)\n",
+        "addbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
+        "addbackup_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
+        "addbackup_hbox = HBox((addbackup_label, addbackup_checkbox,), layout= t_formrow_layout)\n",
         "\n",
         "addcustomname_text = Text(description= \"Custom Name\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
         "addcustomname_hbox = HBox((addcustomname_text,),layout= t_formrow_layout)\n",
@@ -4833,6 +4810,8 @@
         "adddownloads_vbox = VBox((addr1_hbox, addr2viewcontainer_vbox), layout= mainbox_layout)\n",
         "adddownloads_vbox.name = \"Add Tab\"\n",
         "adddownloads_vbox.add_class('curved-40')\n",
+        "addreplacemerge_label.add_class(\"label-flex\")\n",
+        "addbackup_label.add_class(\"label-flex\")\n",
         "setviewelements(adddownloads_vbox, addr2viewcontainer_vbox, addr2view1_adddownload_vbox, addback_btn, ADD_TAB)\n",
         "\n",
         "### Tab Monitor\n",
@@ -4874,24 +4853,18 @@
         "setviewelements(monitor_vbox, mointorr2viewcontainer_vbox, mointorview1downloadmonitor_vbox, mointorback_btn, MONITOR_TAB)\n",
         "\n",
         "### Tab Config\n",
-        "### r1\n",
+        "### view1 r1\n",
         "\n",
         "configtitle_html = HTML(gethtmltitle('Configurations', 1), layout= tab_title_layout)\n",
         "configback_btn = Button(disabled= True, description=\"Back\", style= bigbtn_style, layout= top_btn_layout)\n",
         "configr1_hbox = HBox((configtitle_html, configback_btn, startpause_btn, status_html), layout= tabtitlerow_layout)\n",
         "\n",
-        "### view1r1v1\n",
-        "\n",
         "configview1r1v1activedownload_numeric = widgets.BoundedIntText(value=5, min=1, max=25, step=1, description='Active Downloads', disabled=False, style=input_style)\n",
         "configview1r1v1_vbox = VBox((configview1r1v1activedownload_numeric,), layout= col4layout)\n",
-        "\n",
-        "### view1r1v2\n",
         "\n",
         "configview1r1v2ftptoggle_checkbox = Checkbox(description= \"Enable FTP\", value= False, disabled= False)\n",
         "configview1r1v2gdrivetoggle_checkbox = Checkbox(description= \"Enable Google Dirve\", value= True)\n",
         "configview1v2vbox = VBox((configview1r1v2ftptoggle_checkbox, configview1r1v2gdrivetoggle_checkbox), layout= col4layout)\n",
-        "\n",
-        "### config-r1v3\n",
         "\n",
         "configview1r1v3ftphost_text = Text(placeholder= \"FTP host address\", description= \"FTP Host\", style= input_style)\n",
         "configview1r1v3ftpuser_text = Text(placeholder= \"FTP account username\", description= \"FTP Username\", style= input_style)\n",
@@ -4900,36 +4873,29 @@
         "\n",
         "configview1r1_hbox = HBox((configview1r1v1_vbox, configview1v2vbox, configview1r1v3_vbox), layout= rowlayout)\n",
         "\n",
-        "### view1r2v1\n",
+        "### view1 r2\n",
         "\n",
         "configview1r2v1localbase_text = Text(placeholder= \"Local Base\", description= \"Local Base\", value= LOCALBASE_DEFAULT, style= input_style)\n",
         "configview1r2v1remotebase_text = Text(placeholder= \"Remote Base\", description=\"Remote Base\", value= FTPBASE_DEFAULT, style= input_style)\n",
         "configview1r2v1_vbox = VBox((configview1r2v1localbase_text, configview1r2v1remotebase_text), layout= col3layout)\n",
         "\n",
-        "### config-r2v2\n",
-        "\n",
-        "configview1r2v2generallib_text = Text(placeholder= \"Downloads Path\", description= \"Downloads Path\", value= GENERAL_DRIVE_PATH_DEFAULT, style= input_style)\n",
-        "configview1r2v2musiclib_text = Text(placeholder= \"Music Library\", description= \"Music Library\", value= MUSIC_DRIVE_PATH_DEFAULT, style= input_style)\n",
+        "configview1r2v2generallib_text = Text(placeholder= \"Downloads Path\", description= \"Downloads Path\", value= GENERAL_PATH_DEFAULT, style= input_style)\n",
+        "configview1r2v2musiclib_text = Text(placeholder= \"Music Library\", description= \"Music Library\", value= MUSIC_PATH_DEFAULT, style= input_style)\n",
         "configview1r2v2_vbox = VBox((configview1r2v2generallib_text, configview1r2v2musiclib_text), layout= col3layout)\n",
         "\n",
-        "### config-r2v3\n",
-        "\n",
-        "configview1r2v3movielib_text = Text(placeholder= \"Movies Library\", description= \"Movies Library\", value= MOVIES_DRIVE_PATH_DEFAULT, style= input_style)\n",
-        "configview1r2v3tvlib_text = Text(placeholder= \"TV Library\", description= \"TV Library\", value= TV_DRIVE_PATH_DEFAULT, style= input_style)\n",
+        "configview1r2v3movielib_text = Text(placeholder= \"Movies Library\", description= \"Movies Library\", value= MOVIES_PATH_DEFAULT, style= input_style)\n",
+        "configview1r2v3tvlib_text = Text(placeholder= \"TV Library\", description= \"TV Library\", value= TV_PATH_DEFAULT, style= input_style)\n",
         "configview1r2v3_vbox = VBox((configview1r2v3movielib_text, configview1r2v3tvlib_text), layout= col3layout)\n",
         "configview1r2_hbox = HBox((configview1r2v1_vbox, configview1r2v2_vbox, configview1r2v3_vbox), layout= rowlayout)\n",
         "\n",
-        "### config-r3v1\n",
+        "### view1 r3\n",
         "\n",
         "configview1r3v1_vbox = VBox(layout= col3layout)\n",
         "\n",
-        "### config-r3v2\n",
         "\n",
         "configview1r3v2bkgenerallib_text = Text(placeholder= \"Backup General Library\", description= \"Backup General Library\", value= '', style= input_style)\n",
         "configview1r3v2bkmusiclib_text = Text(placeholder= \"Backup Music Library\", description= \"Backup Music Library\", value= '', style= input_style)\n",
         "configview1r3v2_vbox = VBox((configview1r3v2bkgenerallib_text, configview1r3v2bkmusiclib_text), layout= col3layout)\n",
-        "\n",
-        "### config-r3v3\n",
         "\n",
         "configview1r3v3bkmovielib_text = Text(placeholder= \"Backup Movie Library\", description= \"Backup Movie Library\", value= '', style= input_style)\n",
         "configview1r3v3bktvlib_text = Text(placeholder= \"Backup TV Library\", description= \"Backup TV Library\", value= '', style= input_style)\n",
@@ -4937,11 +4903,9 @@
         "\n",
         "configview1r3_hbox = HBox((configview1r3v1_vbox, configview1r3v2_vbox, configview1r3v3_vbox), layout= rowlayout)\n",
         "\n",
-        "### config-r4v1\n",
+        "### view1 r4\n",
         "\n",
         "configview1r4v1_vbox = VBox(layout= col2layout)\n",
-        "\n",
-        "### config-r4v2\n",
         "\n",
         "configview1r4v2conffile_text = Text(placeholder= \"Configuration File\", description= \"Configuration File\", value= '', style= input_style)\n",
         "configview1r4v2saveconffile_button = Button(description= \"Export Configuration\",)\n",
@@ -4954,7 +4918,7 @@
         "\n",
         "configview1r4_hbox = HBox((configview1r4v1_vbox, configview1r4v2_vbox), layout= rowlayout)\n",
         "\n",
-        "### config-r5\n",
+        "### view1 r5\n",
         "\n",
         "saveconfstyle = f\"color:{SUCCESS_COLOR}\"\n",
         "configview1r5saveconf_button = Button(description= \"Save Configuration\",)\n",
@@ -4987,20 +4951,19 @@
         "            error(ex())\n",
         "        release()\n",
         "\n",
-        "maintabs = widgets.Tab((search_vbox, adddownloads_vbox, monitor_vbox, config_vbox, imdbsearch_vbox), layout= {\"width\": \"100%\"})\n",
+        "maintabs = widgets.Tab((search_vbox, adddownloads_vbox, monitor_vbox, imdbsearch_vbox, config_vbox), layout= {\"width\": \"100%\"})\n",
         "maintabs.observe(tabchanged_handler, 'selected_index')\n",
-        "\n",
         "maintabs.set_title(0, 'Search')\n",
         "maintabs.set_title(1, 'Add Downloads')\n",
         "maintabs.set_title(2, 'Downloads')\n",
-        "maintabs.set_title(3, 'Configuration')\n",
-        "maintabs.set_title(4, 'IMDB Search')\n",
+        "maintabs.set_title(3, 'IMDB Search')\n",
+        "maintabs.set_title(4, 'Configuration')\n",
         "\n",
         "appstate.tab_indices[SEARCH_TAB] = 0\n",
         "appstate.tab_indices[ADD_TAB] = 1\n",
         "appstate.tab_indices[MONITOR_TAB] = 2\n",
-        "appstate.tab_indices[CONFIG_TAB] = 3\n",
-        "appstate.tab_indices[IMDB_TAB] = 4\n",
+        "appstate.tab_indices[IMDB_TAB] = 3\n",
+        "appstate.tab_indices[CONFIG_TAB] = 4\n",
         "\n",
         "uiclicker_btn = Button(description= UICLICKER_RUN, layout= {'display':'none'})\n",
         "container = Box((maintabs, css_html, uiclicker_btn), layout= {\"width\": \"100%\"})\n",
@@ -5027,8 +4990,6 @@
         "    t1style = f\"color:{ACCENT_COLOR}; display: inline-block; vertical-align: top; padding: 33px;\"\n",
         "    message_container = f'<div style=\"height: {MESSAGE_CONTAINER_HEIGHT}; width:100%; text-align: center; padding: {MESSAGE_CONTAINER_PADDING}\">{gethtmltext(text , style= t1style, fontsize= \"32px\")} </div>'\n",
         "    return HTML(message_container)\n",
-        "\n",
-        "###\n",
         "\n",
         "def iconcss(s):\n",
         "    global icon_css\n",
@@ -5067,7 +5028,7 @@
         "                                            formatters= result.resultstableformatters,\n",
         "                                            configuration= {\n",
         "                                            'rowHeight': 30,\n",
-        "                                            'columnDefaults': {'headerSort': False,}})\n",
+        "                                            'columnDefaults': {'headerSort': True,}})\n",
         "    result.applytablestyle()\n",
         "    result.table.on_click(result.actionhandler)\n",
         "    return result.table\n",
@@ -5122,8 +5083,6 @@
         "    info(f\"Search result view created for {result.search}.\")\n",
         "    searchresults_vbox.name = \"Search results view.\"\n",
         "    return searchresults_vbox\n",
-        "\n",
-        "###\n",
         "\n",
         "def setfilesandsizeinfoview(result: AddResult):\n",
         "    result.sizehtml.value = gethtmltext(\"Total size:\", style= addreslabelstyle, fontsize= addresultlabelfontsize) + gethtmltext( data_str(result.size), fontsize= addresultvaluefontsize)\n",
@@ -5622,22 +5581,21 @@
         "    release()\n",
         "\n",
         "ct = lambda: arethreadsworking(config.setupthreads)\n",
-        "if arethreadsworking(config.setupthreads):\n",
-        "    enable_lt_task.join()\n",
-        "    scrape_watchedmovielist_task.join()\n",
+        "if ct():\n",
+        "    for thread in config.setupthreads:\n",
+        "        thread.join()\n",
         "\n",
         "init = True\n",
         "info(\"Cell execution done.\")\n",
         "release()\n",
         "\n",
-        "if IS_ENV_COLAB:\n",
-        "    output.clear() \n",
-        "\n",
-        "# using Javascript is persisted\n",
         "js = makeclickjs(UICLICKER_RUN, 200, use_evaljs= False, enable_console= False, getstr= True)\n",
         "if not dev:\n",
+        "    #if IS_ENV_COLAB:  output.clear() \n",
         "    display(container, Javascript(js))\n",
         "\n",
+        "# using Javascript is persisted in the output\n",
+        "# when cell done executing with setup thread running in the background, output is cleared.\n",
         "# to debug and see exceptions turn off all back threads."
       ]
     },
