--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -1430,10 +1430,11 @@
         "                                                pagination= None,\n",
         "                                                formatters= imdbresultstableformatters,\n",
         "                                                sorters= imdbresultstablesorters,\n",
-        "                                                selectable='checkbox',\n",
+        "                                                selectable='checkbox', \n",
+        "                                                theme= 'semantic-ui',\n",
         "                                                configuration= {\n",
         "                                                'rowHeight': 70,\n",
-        "                                                'columnDefaults': {'headerSort': True,}})\n",
+        "                                                'columnDefaults': {'headerSort': False,}})\n",
         "        self.applytablestyle()\n",
         "        self.table.on_click(self.actionhandler)  \n",
         "        return self.table  \n",
